--- a/sass/components/_portfolio-buttons.scss
+++ b/sass/components/_portfolio-buttons.scss
@@ -1,29 +1,66 @@
 /* кнопки портфолио */
 
-.portfolio-buttons {
-  margin-bottom: 50px;
-  display: flex;
-  justify-content: center;
-}
+// .portfolio-buttons {
+//   margin-bottom: 50px;
+//   display: flex;
+//   justify-content: center;
+// }
 
-.portfolio-buttons {
-  .button {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+// .portfolio-buttons {
+//   .button {
+//     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//       background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//       box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   }
+// }
+
+// .portfolio-buttons__item {
+//   &:not(:last-child) {
+//     margin-right: 8px;
+//   }
+// }
+
+// .portfolio-buttons .button {
+//   &:hover,
+//   &:focus {
+//     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+//       0px 2px 2px rgba(0, 0, 0, 0.12);
+//   }
+// }
+
+@media screen and (max-width: 767px) {
+  .portfolio-buttons {
+    margin-bottom: 40px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
   }
-}
 
-.portfolio-buttons__item {
-  &:not(:last-child) {
-    margin-right: 8px;
+  .portfolio-buttons {
+    .button {
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
   }
-}
 
-.portfolio-buttons .button {
-  &:hover,
-  &:focus {
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
+  .portfolio-buttons__item {
+    margin-bottom: 15px;
+
+    &:nth-last-child(-n + 2) {
+      margin-bottom: 0px;
+    }
+
+    &:not(:last-child) {
+      margin-right: 8px;
+    }
+  }
+
+  .portfolio-buttons .button {
+    &:hover,
+    &:focus {
+      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
   }
 }
