--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -55,6 +55,10 @@ textarea {
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     width: 768px;
   }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -68,6 +72,39 @@ textarea {
     font-weight: 700;
     font-size: 28px;
     line-height: 1.17;
+    text-align: center;
+    margin-bottom: 30px;
+    letter-spacing: 0.03em;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  .section-title {
+    color: $primary-text-color;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 1.17;
+    text-align: center;
+    margin-bottom: 30px;
+    letter-spacing: 0.03em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+
+  .section-title {
+    color: $primary-text-color;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
     text-align: center;
     margin-bottom: 50px;
     letter-spacing: 0.03em;
@@ -91,10 +128,6 @@ textarea {
 
 .no-top-padding {
   padding-top: 0;
-}
-
-.section--no-padding {
-  padding-bottom: 0;
 }
 
 /* hidden titles */
