--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -80,3 +80,89 @@
     }
   }
 }
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .clients {
+    &.list {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
+
+  .client {
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+
+    &:nth-child(3n + 3) {
+      margin-right: 0;
+    }
+
+    &:nth-child(-n + 3) {
+      margin-bottom: 30px;
+    }
+
+    &__link {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 226px;
+      height: 92px;
+      color: #afb1b8;
+      border: 1px solid #afb1b8;
+      border-radius: 4px;
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &__logo {
+      fill: currentColor;
+    }
+  }
+
+  .client__link {
+    &:hover,
+    &:focus {
+      color: $accent-color;
+      border: 1px solid $accent-color;
+    }
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients {
+    &.list {
+      display: flex;
+    }
+  }
+
+  .client {
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+
+    &__link {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 170px;
+      height: 90px;
+      color: #afb1b8;
+      border: 1px solid #afb1b8;
+      border-radius: 4px;
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &__logo {
+      fill: currentColor;
+    }
+  }
+
+  .client__link {
+    &:hover,
+    &:focus {
+      color: $accent-color;
+      border: 1px solid $accent-color;
+    }
+  }
+}
