--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -50,7 +50,7 @@
 @media screen and (max-width: 767px) {
   .features {
     &__item {
-      width: 450px;
+      width: 100%;
     }
   }
 
@@ -65,7 +65,7 @@
     height: 70px;
 
     &-sizes {
-      width: 450px;
+      width: 100%;
       height: 120px;
       display: flex;
       justify-content: center;
@@ -92,5 +92,110 @@
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  /* features */
+  .features {
+    display: flex;
+    flex-wrap: wrap;
+
+    &__item {
+      width: 354px;
+    }
+  }
+
+  .features__item {
+    &:nth-child(2n + 1) {
+      margin-right: 30px;
+    }
+
+    &:nth-child(-n + 2) {
+      margin-bottom: 30px;
+    }
+  }
+  /* иконки преимуществ */
+
+  .features__icon {
+    width: 70px;
+    height: 70px;
+
+    &-sizes {
+      width: 354px;
+      height: 120px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #f5f4fa;
+      border-radius: 4px;
+      margin-bottom: 30px;
+    }
+  }
+
+  .features__title {
+    color: $primary-text-color;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+  }
+
+  /* описание преимуществ */
+  .features__description {
+    color: $secondary-text-color;
+    font-size: 14px;
+    line-height: 1.7;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features {
+    display: flex;
+
+    &__item {
+      width: 270px;
+    }
+  }
+
+  .features__item {
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
+
+  /* иконки преимуществ */
+
+  .features__icon {
+    width: 70px;
+    height: 70px;
+
+    &-sizes {
+      width: 270px;
+      height: 120px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #f5f4fa;
+      border-radius: 4px;
+      margin-bottom: 30px;
+    }
+  }
+
+  .features__title {
+    color: $primary-text-color;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+  }
+
+  /* описание преимуществ */
+  .features__description {
+    color: $secondary-text-color;
+    font-size: 14px;
+    line-height: 1.7;
   }
 }
