--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -213,3 +213,235 @@
     }
   }
 }
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  /* footer */
+
+  .footer {
+    background-color: #2f303a;
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    .logo {
+      display: block;
+      margin-bottom: 20px;
+    }
+
+    &__title {
+      color: $white-color;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 1.14;
+      letter-spacing: 0.03em;
+      text-transform: uppercase;
+      margin-bottom: 20px;
+    }
+
+    .container {
+      display: block;
+      align-items: baseline;
+    }
+
+    .container--footer {
+      padding-left: 89px;
+      padding-right: 76px;
+    }
+
+    &__tablet {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      margin-bottom: 60px;
+    }
+
+    &__section {
+      justify-content: center;
+      text-align: center;
+
+      &.social {
+        align-items: baseline;
+      }
+    }
+  }
+
+  /* logo bottom */
+  .logo__bottom--color {
+    color: $white-color;
+  }
+
+  // /* street adress */
+  .street {
+    color: $white-color;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    background-color: #2f303a;
+    font-style: normal;
+    margin-bottom: 9px;
+    display: block;
+  }
+
+  /* contacts bottom */
+  .list {
+    &__contact {
+      color: rgba(255, 255, 255, 0.6);
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 1.71;
+      font-style: normal;
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+
+  .list__contact {
+    &:hover {
+      color: $accent-color;
+    }
+  }
+
+  .list__item {
+    &:not(:last-child) {
+      margin-bottom: 9px;
+    }
+  }
+
+  .socials {
+    &__footer-items {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 44px;
+      height: 44px;
+      border-radius: 50%;
+      color: $white-color;
+      background-color: rgba(255, 255, 255, 0.1);
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+
+  .socials__link-footer {
+    &:not(:last-child) {
+      margin-right: 10px;
+    }
+  }
+
+  .socials__footer-items {
+    &:hover,
+    &:focus {
+      color: $white-color;
+      background-color: $accent-color;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  /* footer */
+
+  .footer {
+    background-color: #2f303a;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    .container {
+      display: flex;
+      align-items: baseline;
+    }
+
+    &__section:not(:last-child) {
+      margin-right: 70px;
+    }
+
+    &__section.social {
+      margin-right: 93px;
+    }
+
+    &__tablet {
+      display: flex;
+    }
+  }
+
+  /* logo bottom */
+  .logo__bottom--color {
+    color: $white-color;
+  }
+
+  .footer {
+    .logo {
+      display: block;
+      margin-bottom: 20px;
+    }
+
+    &__title {
+      color: $white-color;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 1.14;
+      letter-spacing: 0.03em;
+      text-transform: uppercase;
+      margin-bottom: 20px;
+    }
+  }
+
+  /* street adress */
+  .street {
+    color: $white-color;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    background-color: #2f303a;
+    font-style: normal;
+    margin-bottom: 9px;
+    display: block;
+  }
+
+  /* contacts bottom */
+  .list {
+    &__contact {
+      color: rgba(255, 255, 255, 0.6);
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 1.71;
+      font-style: normal;
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+
+  .list__contact {
+    &:hover {
+      color: $accent-color;
+    }
+  }
+
+  .list__item {
+    &:not(:last-child) {
+      margin-bottom: 9px;
+    }
+  }
+
+  .socials {
+    &__footer-items {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 44px;
+      height: 44px;
+      border-radius: 50%;
+      color: $white-color;
+      background-color: rgba(255, 255, 255, 0.1);
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+
+  .socials__link-footer {
+    &:not(:last-child) {
+      margin-right: 10px;
+    }
+  }
+
+  .socials__footer-items {
+    &:hover,
+    &:focus {
+      color: $white-color;
+      background-color: $accent-color;
+    }
+  }
+}
