--- a/sass/components/_second-page-examples.scss
+++ b/sass/components/_second-page-examples.scss
@@ -174,3 +174,184 @@
     }
   }
 }
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .examples {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .card {
+    width: calc((100% - 30px) / 2);
+    margin-right: 30px;
+    margin-bottom: 30px;
+
+    &__link {
+      display: block;
+      transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &:nth-child(2n) {
+      margin-right: 0px;
+    }
+
+    &:last-child {
+      margin-bottom: 60px;
+    }
+
+    &__overlay {
+      position: relative;
+      height: 294px;
+      overflow: hidden;
+    }
+
+    &__description {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      padding: 63px 24px;
+      font-size: 18px;
+      line-height: 1.56;
+      letter-spacing: 0.03em;
+      color: $white-color;
+      background-color: $accent-color;
+      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+
+  .card__link {
+    &:hover,
+    &:focus {
+      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+  }
+
+  .card__link:hover .card__description,
+  .card__link:focus .card__description {
+    transform: translateY(-100%);
+  }
+
+  .card__link:hover,
+  .card__link:focus {
+    .card__description {
+      transform: translateY(-100%);
+    }
+  }
+
+  .project {
+    flex-grow: 1;
+    padding: 20px 24px;
+    border-right: 1px solid #eeeeee;
+    border-bottom: 1px solid #eeeeee;
+    border-left: 1px solid #eeeeee;
+
+    &__name {
+      color: $primary-text-color;
+      font-weight: 700;
+      font-size: 18px;
+      line-height: 2;
+      letter-spacing: 0.06em;
+      margin-bottom: 4px;
+    }
+
+    &__type {
+      color: $secondary-text-color;
+      font-size: 16px;
+      line-height: 1.87;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .examples {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  /* card */
+
+  .card {
+    width: calc((100% - 60px) / 3);
+    margin-right: 30px;
+    margin-bottom: 30px;
+
+    &__link {
+      display: block;
+      transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &:nth-child(3n) {
+      margin-right: 0px;
+    }
+
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
+
+    &__overlay {
+      position: relative;
+      height: 294px;
+      overflow: hidden;
+    }
+
+    &__description {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      padding: 63px 24px;
+      font-size: 18px;
+      line-height: 1.56;
+      letter-spacing: 0.03em;
+      color: $white-color;
+      background-color: $accent-color;
+      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+
+  .card__link {
+    &:hover,
+    &:focus {
+      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+  }
+
+  .card__link:hover .card__description,
+  .card__link:focus .card__description {
+    transform: translateY(-100%);
+  }
+
+  .card__link:hover,
+  .card__link:focus {
+    .card__description {
+      transform: translateY(-100%);
+    }
+  }
+
+  .project {
+    padding: 20px 24px;
+    border-right: 1px solid #eeeeee;
+    border-bottom: 1px solid #eeeeee;
+    border-left: 1px solid #eeeeee;
+
+    &__name {
+      color: $primary-text-color;
+      font-weight: 700;
+      font-size: 18px;
+      line-height: 2;
+      letter-spacing: 0.06em;
+      margin-bottom: 4px;
+    }
+
+    &__type {
+      color: $secondary-text-color;
+      font-size: 16px;
+      line-height: 1.87;
+    }
+  }
+}
