--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -76,6 +76,7 @@
   .section {
     &.team {
       background-color: $secondary-background-color;
+      width: 100%;
     }
   }
 
@@ -85,7 +86,7 @@
         margin-bottom: 30px;
       }
 
-      width: 450px;
+      width: 100%;
       height: 622px;
       background-color: $white-color;
       box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -94,8 +95,7 @@
     }
 
     &__photo {
-      width: 450px;
-      height: 460px;
+      width: 100%;
     }
 
     &__name {
@@ -123,6 +123,166 @@
       display: flex;
       justify-content: space-between;
     }
+
+    &__items {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 44px;
+      height: 44px;
+      border-radius: 50%;
+      color: #afb1b8;
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &__icon {
+      fill: currentColor;
+    }
+  }
+
+  .socials__items {
+    &:hover,
+    &:focus {
+      color: $white-color;
+      background-color: $accent-color;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  /* section team */
+
+  .section {
+    &.team {
+      background-color: $secondary-background-color;
+    }
+  }
+
+  .members {
+    display: flex;
+    flex-wrap: wrap;
+
+    &__item {
+      width: calc((100% - 30px) / 2);
+      margin-right: 30px;
+      background-color: $white-color;
+      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+      border-radius: 0px 0px 4px 4px;
+    }
+
+    &__photo {
+      width: 354px;
+      height: 374px;
+    }
+
+    &__name {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 1.18;
+      margin-bottom: 10px;
+    }
+
+    &__work-position {
+      color: $secondary-text-color;
+      font-size: 16px;
+      line-height: 1.18;
+      margin-bottom: 16px;
+    }
+
+    &__description {
+      text-align: center;
+      padding: 30px 74px;
+    }
+  }
+
+  .members__item {
+    &:nth-child(2n) {
+      margin-right: 0px;
+    }
+
+    &:nth-child(-n + 2) {
+      margin-bottom: 30px;
+    }
+  }
+
+  .socials {
+    display: flex;
+    justify-content: space-between;
+
+    &__items {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 44px;
+      height: 44px;
+      border-radius: 50%;
+      color: #afb1b8;
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &__icon {
+      fill: currentColor;
+    }
+  }
+
+  .socials__items {
+    &:hover,
+    &:focus {
+      color: $white-color;
+      background-color: $accent-color;
+    }
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section {
+    &.team {
+      background-color: $secondary-background-color;
+    }
+  }
+  .members {
+    display: flex;
+
+    &__item {
+      width: calc((100% - 90px) / 4);
+      margin-right: 30px;
+      background-color: $white-color;
+      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+      border-radius: 0px 0px 4px 4px;
+    }
+
+    &__name {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 1.18;
+      margin-bottom: 10px;
+    }
+
+    &__work-position {
+      color: $secondary-text-color;
+      font-size: 16px;
+      line-height: 1.18;
+      margin-bottom: 16px;
+    }
+
+    &__description {
+      text-align: center;
+      padding: 30px 32px;
+    }
+  }
+
+  .members__item {
+    &:nth-child(4n) {
+      margin-right: 0px;
+    }
+  }
+
+  .socials {
+    display: flex;
+    justify-content: space-between;
 
     &__items {
       display: flex;
