--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -341,6 +341,7 @@
     background-color: #2f303a;
     padding-top: 60px;
     padding-bottom: 60px;
+
     .container {
       display: flex;
       align-items: baseline;
@@ -356,6 +357,7 @@
 
     &__tablet {
       display: flex;
+      align-items: baseline;
     }
   }
 
