--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,8 @@ header {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 textarea {
@@ -154,6 +156,49 @@ textarea {
 /* logo */
 /* site-nav */
 /* auth nav */
+.mobile-menu {
+  background-color: green;
+  padding: 20px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.mobile-menu.is-open {
+  display: block;
+}
+
+@media screen and (max-width: 767px) {
+  .mobile-menu {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+
+.burger-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+@media screen and (min-width: 768px) {
+  .burger-button {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .logo {
     color: #2196f3;
@@ -180,6 +225,38 @@ textarea {
     padding-bottom: 16px;
     padding-left: 15px;
     padding-right: 23px;
+  }
+  nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  header {
+    position: relative;
+  }
+  .burger-button .icon-burger-close {
+    display: none;
+  }
+  .burger-button.is-open .icon-burger-close {
+    display: block;
+  }
+  .burger-button.is-open .icon-burger-menu {
+    display: none;
+  }
+  .navigation,
+  .contacts {
+    height: 40px;
+    width: 50px;
+  }
+  .navigation,
+  .contacts {
+    outline: 1px solid teal;
   }
 }
 
@@ -437,15 +514,14 @@ textarea {
         -ms-flex-align: center;
             align-items: center;
   }
-}
-
-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 /* hero */
@@ -494,8 +570,8 @@ nav {
     position: absolute;
     top: 50%;
     left: 50%;
-    min-width: 100%;
-    min-height: 100%;
+    max-width: 450px;
+    width: 100%;
     padding: 40px;
     border-radius: 4px;
     z-index: 10;
@@ -521,6 +597,8 @@ nav {
     width: 100%;
     height: 100%;
     opacity: 1;
+    padding: 93px 15px 94px;
+    overflow-y: scroll;
     background-color: rgba(0, 0, 0, 0.2);
     -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -2211,6 +2289,9 @@ nav {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
   }
   /* logo bottom */
   .logo__bottom--color {
@@ -2661,7 +2742,14 @@ nav {
     margin-bottom: 30px;
   }
   .card__link {
-    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 100%;
     -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
