--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -115,6 +115,41 @@
 //   }
 // }
 
+.mobile-menu {
+  background-color: green;
+  padding: 20px;
+  text-align: center;
+  font-size: 20px;
+
+  &.is-open {
+    display: block;
+  }
+
+  @media screen and (max-width: 767px) {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+  }
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+
+.burger-button {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .logo {
     color: $accent-color;
@@ -145,6 +180,49 @@
     padding-bottom: 16px;
     padding-left: 15px;
     padding-right: 23px;
+  }
+
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  header {
+    position: relative;
+  }
+
+  .burger-button {
+    .icon-burger-close {
+      display: none;
+    }
+  }
+
+  .burger-button {
+    &.is-open {
+      .icon-burger-close {
+        display: block;
+      }
+    }
+  }
+
+  .burger-button {
+    &.is-open {
+      .icon-burger-menu {
+        display: none;
+      }
+    }
+  }
+
+  .navigation,
+  .contacts {
+    height: 40px;
+    width: 50px;
+  }
+
+  .navigation,
+  .contacts {
+    outline: 1px solid teal;
   }
 }
 
@@ -407,8 +485,8 @@
       align-items: center;
     }
   }
-}
-nav {
-  display: flex;
-  align-items: center;
+  nav {
+    display: flex;
+    align-items: center;
+  }
 }
