--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -103,8 +103,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    min-width: 100%;
-    min-height: 100%;
+    max-width: 450px;
+    width: 100%;
     padding: 40px;
     border-radius: 4px;
     z-index: 10;
@@ -129,6 +129,8 @@
     width: 100%;
     height: 100%;
     opacity: 1;
+    padding: 93px 15px 94px;
+    overflow-y: scroll;
     background-color: rgba(0, 0, 0, 0.2);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
