--- a/sass/components/_second-page-examples.scss
+++ b/sass/components/_second-page-examples.scss
@@ -187,7 +187,9 @@
     margin-bottom: 30px;
 
     &__link {
-      display: block;
+      display: flex;
+      flex-direction: column;
+      height: 100%;
       transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
