--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "./utils/variables";
 @import "./base/common";
+@import "./components/burger";
 @import "./components/header";
 @import "./components/hero";
 @import "./components/form-hero";
