--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,14 @@ textarea {
   resize: none;
 }
 
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
 .list {
   list-style: none;
 }
@@ -45,6 +53,7 @@ textarea {
   margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
+  position: relative;
 }
 
 @media screen and (max-width: 767px) {
@@ -151,6 +160,198 @@ textarea {
 .button:focus {
   color: #ffffff;
   background-color: #2196f3;
+}
+
+.burger-btn {
+  position: absolute;
+  top: 10px;
+  right: 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .burger-btn {
+    display: none;
+  }
+}
+
+.burger-btn__icon:hover, .burger-btn__icon:focus {
+  fill: #2196f3;
+}
+
+.burger-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  z-index: 99;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  padding-top: 48px;
+  padding-bottom: 90px;
+  background-color: #fff;
+  -webkit-transition: -webkit-transform 250ms linear;
+  transition: -webkit-transform 250ms linear;
+  transition: transform 250ms linear;
+  transition: transform 250ms linear, -webkit-transform 250ms linear;
+}
+
+@media screen and (min-width: 768px) {
+  .burger-menu {
+    display: none;
+  }
+}
+
+.burger-menu.is-open {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  -webkit-transition: -webkit-transform 250ms linear;
+  transition: -webkit-transform 250ms linear;
+  transition: transform 250ms linear;
+  transition: transform 250ms linear, -webkit-transform 250ms linear;
+}
+
+.burger-menu__button {
+  position: absolute;
+  top: 11px;
+  right: 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 10px;
+  background-color: transparent;
+  border: none;
+}
+
+.burger-menu__button:hover .burger-menu__icon,
+.burger-menu__button:focus .burger-menu__icon {
+  fill: #2196f3;
+}
+
+.burger-nav {
+  margin-bottom: 100px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.burger-nav__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.burger-nav__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+  color: #212121;
+  -webkit-transition: color 250ms linear;
+  transition: color 250ms linear;
+}
+
+.burger-nav__link:hover, .burger-nav__link:focus {
+  color: #2196f3;
+}
+
+.burger-nav__link--current {
+  color: #2196f3;
+}
+
+.burger-contacts {
+  margin-bottom: 64px;
+}
+
+.burger-contacts__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.burger-contacts__link--tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.176;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.burger-contacts__link--email {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.167;
+  letter-spacing: 0.02em;
+  color: #757575;
+  -webkit-transition: color 250ms linear;
+  transition: color 250ms linear;
+}
+
+.burger-contacts__link--email:hover, .burger-contacts__link--email:focus {
+  color: #2196f3;
+}
+
+.burger-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.burger-social__item {
+  margin-top: 10px;
+}
+
+.burger-social__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.122;
+  letter-spacing: 0.02em;
+  color: #2196f3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.burger-social__item:not(:last-child) .burger-social__link::after {
+  content: "";
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  width: 1px;
+  height: 22px;
+  background-color: rgba(33, 33, 33, 0.2);
+  margin-left: 10px;
+}
+
+.burger-social__item:not(:last-child) {
+  margin-right: 10px;
 }
 
 /* logo */
@@ -534,10 +735,20 @@ textarea {
   }
   .hero__overlay {
     margin: 0 auto;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/background-hero.jpeg);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background-hero.jpeg);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/background-hero-mobile1x.jpeg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background-hero-mobile1x.jpeg);
     background-size: cover;
+    background-position: center;
   }
+}
+
+@media screen and (max-width: 767px) and (min-device-pixel-ratio: 2), screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 767px) and (min-resolution: 192dpi), screen and (max-width: 767px) and (min-resolution: 2dppx) {
+  .hero__overlay .hero__overlay {
+    background-image: url(../images/background-hero-mobile2x.jpeg);
+  }
+}
+
+@media screen and (max-width: 767px) {
   .hero__title {
     color: #ffffff;
     font-size: 26px;
@@ -653,7 +864,17 @@ textarea {
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/background-hero.jpeg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background-hero.jpeg);
     background-size: cover;
+    background-position: center;
   }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 2dppx) {
+  .hero__overlay .hero__overlay {
+    background-image: url(../images/tabletx2.jpeg);
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .hero__title {
     color: #ffffff;
     font-size: 26px;
@@ -770,7 +991,17 @@ textarea {
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/background-hero.jpeg);
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background-hero.jpeg);
     background-size: cover;
+    background-position: center;
   }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero__overlay .hero__overlay {
+    background-image: url(../images/tabletx2.jpeg);
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .hero__title {
     color: #ffffff;
     font-size: 44px;
