--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -67,8 +67,19 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../images/background-hero.jpeg);
+        url(../images/background-hero-mobile1x.jpeg);
       background-size: cover;
+      background-position: center;
+
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        .hero {
+          &__overlay {
+            background-image: url(../images/background-hero-mobile2x.jpeg);
+          }
+        }
+      }
     }
 
     &__title {
@@ -189,6 +200,17 @@
         ),
         url(../images/background-hero.jpeg);
       background-size: cover;
+      background-position: center;
+
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        .hero {
+          &__overlay {
+            background-image: url(../images/tabletx2.jpeg);
+          }
+        }
+      }
     }
 
     &__title {
@@ -313,6 +335,17 @@
         ),
         url(../images/background-hero.jpeg);
       background-size: cover;
+      background-position: center;
+
+      @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+        .hero {
+          &__overlay {
+            background-image: url(../images/tabletx2.jpeg);
+          }
+        }
+      }
     }
 
     &__title {
