--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -34,8 +34,46 @@
 //     border: 1px solid $accent-color;
 //   }
 // }
+@media screen and (min-width: 0px) and (max-width: 479px) {
+  .clients {
+    &.list {
+      text-align: center;
+    }
+  }
 
-@media screen and (max-width: 767px) {
+  .client {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+
+    &__link {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 90px;
+      color: #afb1b8;
+      border: 1px solid #afb1b8;
+      border-radius: 4px;
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &__logo {
+      fill: currentColor;
+    }
+  }
+
+  .client__link {
+    &:hover,
+    &:focus {
+      color: $accent-color;
+      border: 1px solid $accent-color;
+    }
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .clients {
     &.list {
       display: flex;
