--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -71,8 +71,87 @@
 //     background-color: $accent-color;
 //   }
 // }
+@media screen and (min-width: 0px) and (max-width: 479px) {
+  .section {
+    &.team {
+      background-color: $secondary-background-color;
+      width: 100%;
+    }
+  }
 
-@media screen and (max-width: 767px) {
+  .members {
+    &__item {
+      &:not(:last-child) {
+        margin-bottom: 30px;
+      }
+
+      width: 100%;
+      background-color: $white-color;
+      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+      border-radius: 0px 0px 4px 4px;
+    }
+
+    &__photo {
+      width: 100%;
+      margin-bottom: 30px;
+    }
+
+    &__name {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 1.18;
+      margin-bottom: 10px;
+    }
+
+    &__work-position {
+      color: $secondary-text-color;
+      font-size: 16px;
+      line-height: 1.18;
+      margin-bottom: 16px;
+    }
+
+    &__description {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+    }
+  }
+
+  .socials {
+    &.list {
+      display: flex;
+      justify-content: center;
+    }
+
+    &__items {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 44px;
+      height: 44px;
+      border-radius: 50%;
+      color: #afb1b8;
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &__icon {
+      fill: currentColor;
+    }
+  }
+
+  .socials__items {
+    &:hover,
+    &:focus {
+      color: $white-color;
+      background-color: $accent-color;
+    }
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .section {
     &.team {
       background-color: $secondary-background-color;
