--- a/sass/components/_burger.scss
+++ b/sass/components/_burger.scss
@@ -117,6 +117,10 @@
   line-height: 1.176;
   letter-spacing: 0.02em;
   color: $accent-color;
+
+  @media screen and (min-width: 0px) and (max-width: 479px) {
+    font-size: 20px;
+  }
 }
 
 .burger-contacts__link--email {
