--- a/sass/components/_form-hero.scss
+++ b/sass/components/_form-hero.scss
@@ -177,8 +177,189 @@
 // .modal-form__input:focus + .modal-form__icon {
 //   color: $accent-color;
 // }
+@media screen and (min-width: 0px) and (max-width: 479px) {
+  .form-title {
+    font-weight: 700;
+    font-size: 10px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 12px;
+  }
 
-@media screen and (max-width: 767px) {
+  .form-data {
+    max-width: 370px;
+    margin: 0 auto;
+  }
+
+  .modal-form {
+    &__field {
+      margin-bottom: 10px;
+      display: flex;
+      flex-direction: column;
+      position: relative;
+    }
+
+    &__textarea {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px;
+    }
+
+    &__label {
+      margin-right: auto;
+      margin-bottom: 4px;
+      font-size: 12px;
+      line-height: 1.16;
+      letter-spacing: 0.01em;
+      color: $secondary-text-color;
+    }
+
+    &__button {
+      padding-top: 10px;
+      padding-bottom: 10px;
+      padding-right: 55px;
+      padding-left: 56px;
+      width: 200px;
+      height: 50px;
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 1.87;
+      letter-spacing: 0.06em;
+      border: transparent;
+      border-radius: 4px;
+      color: $white-color;
+      background-color: $accent-color;
+      transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &__input {
+      padding-top: 12px;
+      padding-bottom: 12px;
+      padding-right: 16px;
+      padding-left: 42px;
+      border: 1px solid rgba(33, 33, 33, 0.2);
+      border-radius: 4px;
+      font-size: 12px;
+      line-height: 1.16;
+      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &__textarea-input {
+      padding: 12px 16px;
+      border: 1px solid rgba(33, 33, 33, 0.2);
+      border-radius: 4px;
+      font-size: 12px;
+      line-height: 1.16;
+      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &__icon {
+      fill: currentColor;
+      position: absolute;
+      top: 50%;
+      left: 15px;
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+  }
+
+  .modal-form__button {
+    &:hover,
+    &:focus {
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+      background: #188ce8;
+    }
+  }
+
+  .modal-form__input {
+    &:focus {
+      outline: none;
+      border-color: $accent-color;
+    }
+
+    &::placeholder {
+      font-size: 12px;
+      line-height: 1.16;
+      letter-spacing: 0.01em;
+      color: rgba(117, 117, 117, 0.5);
+    }
+  }
+
+  .modal-form__textarea-input {
+    &:focus {
+      outline: none;
+      border-color: $accent-color;
+    }
+
+    &::placeholder {
+      font-size: 12px;
+      line-height: 1.16;
+      letter-spacing: 0.01em;
+      color: rgba(117, 117, 117, 0.5);
+    }
+  }
+
+  .checkbox {
+    margin-bottom: 30px;
+
+    &__input {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      margin: -1px;
+      border: 0;
+      padding: 0;
+
+      white-space: nowrap;
+      clip-path: inset(100%);
+      clip: rect(0 0 0 0);
+      overflow: hidden;
+    }
+
+    &__icon {
+      display: inline-block;
+      width: 15px;
+      height: 15px;
+      border: 2px solid black;
+      border-radius: 2px;
+      margin-right: 8px;
+    }
+
+    &__label {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    &__span {
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 1.16;
+      letter-spacing: 0.03em;
+      color: #757575;
+    }
+
+    &__link {
+      color: $accent-color;
+    }
+  }
+
+  .checkbox__input:checked + .checkbox__icon {
+    border: $accent-color;
+    background-color: $accent-color;
+    background-image: url(../images/icon-check.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-origin: border-box;
+    background-position: center;
+  }
+
+  .modal-form__input:focus + .modal-form__icon {
+    color: $accent-color;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .form-title {
     font-weight: 700;
     font-size: 20px;
