--- a/sass/components/_burger.scss
+++ b/sass/components/_burger.scss
@@ -38,7 +38,7 @@
   padding-top: 48px;
   padding-bottom: 90px;
   background-color: #fff;
-  transition: transform 250ms linear;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (min-width: 768px) {
     display: none;
@@ -55,7 +55,7 @@
 
 .burger-menu.is-open {
   transform: translateY(0);
-  transition: transform 250ms linear;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .burger-menu__button {
@@ -91,7 +91,7 @@
   line-height: 1.175;
   letter-spacing: 0.02em;
   color: #212121;
-  transition: color 250ms linear;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
   &:focus {
     color: $accent-color;
@@ -129,7 +129,7 @@
   line-height: 1.167;
   letter-spacing: 0.02em;
   color: $secondary-text-color;
-  transition: color 250ms linear;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
